force-app/main/default/objects/Snapshot_Data__c/Snapshot_Data__c.object-meta.xml
<CustomObject>
    <label>Point In Time Snapshot</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Point In Time Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Point In Time Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>