force-app/main/default/objects/Snapshot_Data__c/fields/Actual_Close_Date_Vision_Hist__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date_Vision_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Close Date (Vision)_Hist</label>
    <type>Date</type>
</CustomField>