force-app/main/default/objects/Snapshot_Data__c/fields/Aggregator_Involved_in_the_Oppty_Risk_Hi__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Involved_in_the_Oppty_Risk_Hi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aggregator Involved in the Oppty/Risk_Hi</label>
    <length>100</length>
    <type>Text</type>
</CustomField>