force-app/main/default/objects/Snapshot_Data__c/fields/Company_Name_Hist__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Hist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name_Hist</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Point In Time Snapshot</relationshipLabel>
    <relationshipName>Point_In_Time_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>