force-app/main/default/objects/Snapshot_Data__c/fields/Distribution_Type_Hist__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distribution Type_Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>