force-app/main/default/objects/Snapshot_Data__c/fields/Effective_Date_Hist__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date_Hist</label>
    <type>Date</type>
</CustomField>