force-app/main/default/objects/Snapshot_Data__c/fields/Estimated_Additional_New_Members_Hist__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Additional_New_Members_Hist__c</fullName>
    <label>Estimated Additional New Members_Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>