force-app/main/default/objects/Snapshot_Data__c/fields/Estimated_Members_Existing_New_Hist__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Members_Existing_New_Hist__c</fullName>
    <label>Estimated Members (Existing + New)_Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>