force-app/main/default/objects/Snapshot_Data__c/fields/Existing_Members_Involved_in_the_Bid_His__c.field-meta.xml
<CustomField>
    <fullName>Existing_Members_Involved_in_the_Bid_His__c</fullName>
    <label>Existing Members Involved in the Bid_His</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>