force-app/main/default/objects/Snapshot_Data__c/fields/Existing_Members_Retained_Hist__c.field-meta.xml
<CustomField>
    <fullName>Existing_Members_Retained_Hist__c</fullName>
    <label>Existing Members Retained_Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>