force-app/main/default/objects/Snapshot_Data__c/fields/Existing_Membership_at_Risk_Hist__c.field-meta.xml
<CustomField>
    <fullName>Existing_Membership_at_Risk_Hist__c</fullName>
    <label>Existing Membership at Risk_Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>