force-app/main/default/objects/Snapshot_Data__c/fields/Ext_Mbrs_Risk_Outcome_Vision_Hist__c.field-meta.xml
<CustomField>
    <fullName>Ext_Mbrs_Risk_Outcome_Vision_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ext Mbrs Risk Outcome (Vision)_Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>