force-app/main/default/objects/Snapshot_Data__c/fields/External_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Unique Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>