force-app/main/default/objects/Snapshot_Data__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <formula>LEFT(Snapshot_Objective__c,Find(&quot;;&quot;, Snapshot_Objective__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency</label>
    <type>Text</type>
</CustomField>