force-app/main/default/objects/Snapshot_Data__c/fields/Line_Item_Id_Hist__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Id_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line Item Id Hist</label>
    <length>50</length>
    <type>Text</type>
</CustomField>