force-app/main/default/objects/Snapshot_Data__c/fields/Mbrs_Transferred_From_To_Another_Segment__c.field-meta.xml
<CustomField>
    <fullName>Mbrs_Transferred_From_To_Another_Segment__c</fullName>
    <label>Mbrs Transferred From To Another Segment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>