force-app/main/default/objects/Snapshot_Data__c/fields/Members_in_the_Proposal_Medical_Hist__c.field-meta.xml
<CustomField>
    <fullName>Members_in_the_Proposal_Medical_Hist__c</fullName>
    <label>Members in the Proposal (Medical)_Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>