force-app/main/default/objects/Snapshot_Data__c/fields/Members_QUOTED_in_the_Proposal_Medical__c.field-meta.xml
<CustomField>
    <fullName>Members_QUOTED_in_the_Proposal_Medical__c</fullName>
    <label>Members QUOTED in the Proposal (Medical)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>