force-app/main/default/objects/Snapshot_Data__c/fields/Membership_Activity_Name_Hist__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity_Name_Hist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Activity ID_Hist</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Point In Time Snapshot</relationshipLabel>
    <relationshipName>Point_In_Time_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>