force-app/main/default/objects/Snapshot_Data__c/fields/Must_Win_Renew_Trend_Hist__c.field-meta.xml
<CustomField>
    <fullName>Must_Win_Renew_Trend_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Must Win/Renew Trend_Hist</label>
    <length>50</length>
    <type>Text</type>
</CustomField>