force-app/main/default/objects/Snapshot_Data__c/fields/Net_Results_Hist__c.field-meta.xml
<CustomField>
    <fullName>Net_Results_Hist__c</fullName>
    <label>Net Results_Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>