force-app/main/default/objects/Snapshot_Data__c/fields/Opportunity_Risk_Reason_Hist__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Risk_Reason_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity/Risk Reason_Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>