force-app/main/default/objects/Snapshot_Data__c/fields/Overall_New_Membership_Impact_Medical__c.field-meta.xml
<CustomField>
    <fullName>Overall_New_Membership_Impact_Medical__c</fullName>
    <label>Overall New Membership Impact_Medical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>