force-app/main/default/objects/Snapshot_Data__c/fields/Product_Code_Hist__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Code Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>