force-app/main/default/objects/Snapshot_Data__c/fields/Product_Line_Hist__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Line_Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>