force-app/main/default/objects/Snapshot_Data__c/fields/Risk_Probability_Other_Buy_Up_Hist__c.field-meta.xml
<CustomField>
    <fullName>Risk_Probability_Other_Buy_Up_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Probability Other Buy Up Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>