force-app/main/default/objects/Snapshot_Data__c/fields/Risk_Probability_Vision_Hist__c.field-meta.xml
<CustomField>
    <fullName>Risk_Probability_Vision_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Probability (Vision)_Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>