force-app/main/default/objects/Snapshot_Data__c/fields/Sales_Cycle_Hist__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Cycle_Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>