force-app/main/default/objects/Snapshot_Data__c/fields/Sales_Stage_Hist__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Stage_Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>