force-app/main/default/objects/Snapshot_Data__c/fields/Snapshot_Objective__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Objective__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snapshot Objective</label>
    <type>TextArea</type>
</CustomField>