force-app/main/default/objects/Snapshot_Data__c/fields/Sold_Retained_Members_Hist__c.field-meta.xml
<CustomField>
    <fullName>Sold_Retained_Members_Hist__c</fullName>
    <label>Sold \ Retained Members_Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>