force-app/main/default/objects/Snapshot_Data__c/fields/Termed_Members_Hist__c.field-meta.xml
<CustomField>
    <fullName>Termed_Members_Hist__c</fullName>
    <label>Termed Members_Hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>