force-app/main/default/objects/Snapshot_Data__c/fields/Top_List_Hist__c.field-meta.xml
<CustomField>
    <fullName>Top_List_Hist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top List Hist</label>
    <type>Checkbox</type>
</CustomField>