force-app/main/default/objects/Snapshot_Data__c/fields/Top_Pipeline_Oppty_Risk_Hist__c.field-meta.xml
<CustomField>
    <fullName>Top_Pipeline_Oppty_Risk_Hist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Pipeline Oppty/Risk_Hist</label>
    <type>Checkbox</type>
</CustomField>