force-app/main/default/objects/Snapshot_Data__c/fields/UMR_Opportunity_Risk_Hist__c.field-meta.xml
<CustomField>
    <fullName>UMR_Opportunity_Risk_Hist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UMR Opportunity\Risk_Hist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>