force-app/main/default/objects/Snapshot_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership_Activity_Name_Hist__c</columns>
    <columns>Company_Name_Hist__c</columns>
    <columns>Sales_Stage_Hist__c</columns>
    <columns>Product_Line_Hist__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Snapshot_Objective__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>