force-app/main/default/objects/Snapshot_Data__c/listViews/Monthly_MA_Snapshot_ALL.listView-meta.xml
<ListView>
    <fullName>Monthly_MA_Snapshot_ALL</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Membership_Activity_Name_Hist__c</columns>
    <columns>Company_Name_Hist__c</columns>
    <columns>Sales_Stage_Hist__c</columns>
    <columns>Product_Line_Hist__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Snapshot_Objective__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Frequency__c</field>
        <operation>contains</operation>
        <value>Monthly</value>
    </filters>
    <label>Monthly MA Snapshot All</label>
</ListView>