force-app/main/default/objects/Snapshot_Data__c/listViews/Monthly_MA_Snapshot_Missing_Records.listView-meta.xml
<ListView>
    <fullName>Monthly_MA_Snapshot_Missing_Records</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Membership_Activity_Name_Hist__c</columns>
    <columns>Company_Name_Hist__c</columns>
    <columns>Sales_Stage_Hist__c</columns>
    <columns>Product_Line_Hist__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Snapshot_Objective__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Frequency__c</field>
        <operation>contains</operation>
        <value>Monthly</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>a0M6A000004K7IqUAK,a0M6A000004K7IrUAK,a0M6A000004K7IsUAK,a0M6A000004K7ItUAK,a0M6A000004K7IvUAK,a0M6A000004K7IwUAK,a0M6A000004K7IxUAK,a0M6A000004K7IyUAK,a0M6A000004K7IzUAK,a0M6A000004K7J1UAK,a0M6A000004K7J2UAK</value>
    </filters>
    <label>Monthly MA Snapshot - Missing Records</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>