force-app/main/default/objects/Snapshot_Data__c/listViews/RxSp_Monthly_MA_Snapshot_Year_END_2021.listView-meta.xml
<ListView>
    <fullName>RxSp_Monthly_MA_Snapshot_Year_END_2021</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Membership_Activity_Name_Hist__c</columns>
    <columns>Company_Name_Hist__c</columns>
    <columns>Sales_Stage_Hist__c</columns>
    <columns>Product_Line_Hist__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Snapshot_Objective__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Frequency__c</field>
        <operation>equals</operation>
        <value>Frequency=Monthly</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Monthly RX Spec MA Snapshot 2021 Year End</value>
    </filters>
    <label>RxSp Monthly MA Snapshot - Year END 2021</label>
</ListView>