force-app/main/default/objects/Snapshot_Data__c/listViews/Weekly_MA_Snapshot.listView-meta.xml
<ListView>
    <fullName>Weekly_MA_Snapshot</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Membership_Activity_Name_Hist__c</columns>
    <columns>Company_Name_Hist__c</columns>
    <columns>Sales_Stage_Hist__c</columns>
    <columns>Product_Line_Hist__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Snapshot_Objective__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Frequency__c</field>
        <operation>contains</operation>
        <value>Weekly</value>
    </filters>
    <filters>
        <field>Snapshot_Date__c</field>
        <operation>equals</operation>
        <value>12/27/2020</value>
    </filters>
    <label>Weekly MA Snapshot</label>
</ListView>